[Testing] - Fixed validation of inputs on user test attempt. Updated tables to have overflow-x: auto, so that they behave better on mobile / with very long text.
Updated validation for user test attempt to user correct values.
Namely:
title - maxlength: 30
each question input - maxlength: 255

Also updated how default title works. Previously it was setting the name to the current time, even if the user entered a custom title. Now it uses the custom title if set, otherwise uses current time.

Updated all tables used on pages in the system.
Now has width:100% and overflow-x: auto.
Results in tables becoming scrollable on x axis if screen width is too small.
The table scrolls, not the whole pages. Previously the table contents was extend out of the table and offscreen. To view it you had to scroll the page in general, and you could see the table content extented out of the table.

--- a/src/app/components/account/groups/group-home/group-home.component.css
+++ b/src/app/components/account/groups/group-home/group-home.component.css
@@ -21,10 +21,6 @@
 
 
 
-.card-table-container {
-    border-color: black;
-}
-
 
 .table {
     margin-bottom: 0px; /* Remove margin-bottom. */
@@ -70,4 +66,10 @@
     text-align: center;
     margin-top: 2em;
     margin-bottom: 2em;
+}
+
+.card-table-container {
+    border-color: black;
+    max-width: 100%;
+    overflow-x: auto;
 }
